[package]
name = "reth-custom-db"
version = "0.1.0"
edition = "2024"

[dependencies]
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", features = ["node", "cli"] }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth" }
clap = { version = "4", features = ["derive"] }
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
eyre = "0.6"
futures-util = "0.3"
